--- a/src/app/header/styles/header.component.css
+++ b/src/app/header/styles/header.component.css
@@ -1,7 +1,15 @@
 .container {
+  align-items: center;
   display: flex;
 }
 
 img {
   height: 100%;
+  margin-right: auto;
+}
+
+.divider {
+  background: #e9e9e9;
+  height: 2rem;
+  width: 1px;
 }
