--- a/src/app/entry/entry.component.html
+++ b/src/app/entry/entry.component.html
@@ -1,1 +1,4 @@
-<p>entry works!</p>
+<div
+  *ngrxLet="{ scheme: scheme$, width: width$ } as observables"
+  [ngClass]="[observables.scheme, observables.width]"
+></div>
