--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-  --font-mono: "Inconsolata", monospace;
-  --font-sans-serif: "Inter", sans-serif;
-  --font-serif: "Lora", serif;
+  --font-family-monospace: "Inconsolata", monospace;
+  --font-family-sans-serif: "Inter", sans-serif;
+  --font-family-serif: "Lora", serif;
 }
