--- a/src/app/entry/styles/light.entry.component.css
+++ b/src/app/entry/styles/light.entry.component.css
@@ -5,3 +5,11 @@
 .light .part::after {
   background: #e9e9e9;
 }
+
+.light hr {
+  border-top: #e9e9e9 solid 1px;
+}
+
+.light a {
+  color: #2d2d2d;
+}
