--- a/src/app/entry/styles/light.entry.component.css
+++ b/src/app/entry/styles/light.entry.component.css
@@ -1,13 +1,9 @@
-.light {
-  color: #2d2d2d;
-}
-
 .light .part::after {
   background: #e9e9e9;
 }
 
 .light hr {
-  border-top: #e9e9e9 solid 1px;
+  border-color: #e9e9e9;
 }
 
 .light a {
