--- a/src/app/header/font-select/font-menu/styles/dark.font-menu.component.css
+++ b/src/app/header/font-select/font-menu/styles/dark.font-menu.component.css
@@ -1,5 +1,5 @@
 .dark {
   background: #1f1f1f;
-  box-shadow: 0px 5px 30px 0px #A445ED;
+  box-shadow: 0px 5px 30px 0px #a445ed;
   color: #fff;
 }
