--- a/src/app/header/scheme-toggle/scheme-toggle.component.html
+++ b/src/app/header/scheme-toggle/scheme-toggle.component.html
@@ -5,12 +5,8 @@
 >
   <img
     alt="Scheme Toggle"
-    [src]="
-      '../../../assets/images/scheme-toggle-' +
-      observables.width +
-      '-' +
-      observables.scheme +
-      '.svg'
-    "
+    [src]="imgSrc(observables.scheme, observables.width)"
+    (mouseenter)="onHover()"
+    (mouseleave)="onHover()"
   />
 </button>
