--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div
   *ngrxLet="{ font: font$, scheme: scheme$, width: width$ } as observables"
+  class="container"
   [ngClass]="[observables.scheme, observables.width]"
   [ngStyle]="{ fontFamily: observables.font }"
 >
