--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "@angular/cdk/overlay-prebuilt.css";
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -12,4 +10,9 @@
   --font-family-mono: "Inconsolata", monospace;
   --font-family-sans-serif: "Inter", sans-serif;
   --font-family-serif: "Lora", serif;
+}
+
+html,
+body {
+  height: 100%;
 }
